--- a/Thesis/arch.tex
+++ b/Thesis/arch.tex
@@ -1,5 +1,5 @@
 \section{Architecture}
-In this section, we first briefly review of neural networks in NLP in section 2.1.1 so as to obtain insight into how system architecture can effect downstream tasks. Then, in section 2.1.2 we introduce Long Short Term Memory(LSTM) \cite{} and describe how it works. In section 2.1.3 we introduce the transformer \cite{} and briefly discuss how it differs from LSTM. 
+In this section, we first briefly review of neural networks in NLP in section 2.1.1 so as to obtain insight into how system architecture can effect downstream tasks. Then, in section 2.1.2 we introduce Long Short Term Memory(LSTM) \cite{Hochreiter1997LongSM} and describe how it works. In section 2.1.3 we introduce the transformer \cite{Vaswani2017AttentionIA} and briefly discuss how it differs from LSTM. 
 \subsection{Neural Network in NLP}
 In the last few decades, neural networks have provided language researchers with a effective method of building models which can represent the complex phenomena associated with language. In NLP Recurrent Neural Networks(RNN) have been a popular building block because they can retrain information from previous states of calculation in current state. While useful, RNNs have a short-term memory. With long sequences they are unable to keep relevant information which makes them unable to model long text sequences. This issue arises because during back propagation RNNs are susceptible to what is known as the vanishing gradient problem. The vanishing gradient problem is when gradients shrink during back propagation through time. Eventually the gradient becomes too small and doesn't not contribute to what the RNN can learn. In RNN, since it is difficult to get the gradient of earlier seen information it means RNNs tend to ignore earlier content. Methods like LSTM and the transformer are implementations to get around the vanishing gradient that RNNs experience. 
 \subsection{LSTM}
