--- a/Thesis/intro.tex
+++ b/Thesis/intro.tex
@@ -8,13 +8,13 @@ Curriculum's have long been part of the way humans learn. In our schooling instr
 \section{Representing Language}
 In the frame of language understanding researchers have long focused on how to represent all the information which text represents in a way which can be used by other systems. Researchers have explored human curated representations like wordnet \cite{Miller1992WordNetAL}  and explore statistical methods to represent corpuses \cite{Leacock1993TowardsBC}. More recently, statistical methods have tried to produce vector space models where words are represented by a set of vectors in an n-dimensional plane. In the early 2010s, methods like Word2Vec \cite{Mikolov2013EfficientEO} and Glove \cite{Pennington2014GloveGV} were introduced, and the broader NLP community found great leverage in vector based representations of language. Since these word representations mapped each word to a higher dimensional numeric representation systems could now take advantage of the closeness of words via methods like cosine similarity. Moreover, these vector representations of words proved to be a powerful method to represent language for many downstream tasks like: Information Retrieval, Question Answering, Sentiment Analysis, Machine Translation, etc. \\ 
 These fixed word vectors drove incredible improvement and research across many fields but since representations focused on word level vector values, systems were unable to represent word as it different in context. For example: the word fly was represented by the same vector independent if the context was dealing with an insect (There is a fly in my soup!), an action (I want to fly away.), or a description of personal style(You sure look fly!). To expand word representation out of discrete words researchers explore methods like having multiple word vectors for each meaning of a word \cite{Hu2016DifferentCL}, sentence vectors \cite{Kiros2015SkipThoughtV}, paragraph vectors \cite{Le2014DistributedRO}, Gaussian mixtures \cite{Athiwaratkun2017MultimodalWD}  and sub word vectors \cite{Bojanowski2017EnrichingWV} all with the goal of improving models ability to capture expressive semantic information and performs better in situations with polysemy. Many of these techniques were very similar to word vectors but tried to represent all sentences in a corpus using a fixed size vector. While these techniques also drove vast improvement in NLP tasks they struggled to represent sentences outside of the original training corpus and minor changes in sentence structure could have a large effect on the vector representation. \\
-As part of these explorations, researchers used Language Models(LM) to learn word representations. Language modeling is a well defined NLP problem that aims to model a statistical distribution of words in a sentence so we can for some type of prediction about next word. Using LM systems with sesame street inspired names like: ELMO \cite{Peters2019KnowledgeEC}, BERT \cite{Devlin2019BERTPO}, ERNIE \cite{Sun2019ERNIE2} were able to produce what could seem like a never ending stream of new State-of-the-art(SOTA) models that excelled at most NLP problems. The success of these models spun a seemingly continuous wave of new techniques building of BERT like KnowBERT \cite{Peters2019KnowledgeEC}, RoBERTa \cite{Liu2019RoBERTaAR}, AlBERT \cite{Lan2019ALBERTAL}, ELECTRA \cite{Clark2020ELECTRAPT}, and BART \cite{Lewis2019BARTDS}.  \\
+As part of these explorations, researchers used Language Models(LM) to learn word representations. Language modeling is a well defined NLP problem that aims to model a statistical distribution of words in a sentence so we can for some type of prediction about next word. Using LM systems with sesame street inspired names like: ELMO \cite{Peters2019KnowledgeEC}, BERT \cite{Devlin2019BERTPO}, ERNIE \cite{Sun2019ERNIEER} were able to produce what could seem like a never ending stream of new State-of-the-art(SOTA) models that excelled at most NLP problems. The success of these models spun a seemingly continuous wave of new techniques building of BERT like KnowBERT \cite{Peters2019KnowledgeEC}, RoBERTa \cite{Liu2019RoBERTaAR}, AlBERT \cite{Lan2019ALBERTAL}, ELECTRA \cite{Clark2020ELECTRAPT}, and BART \cite{Lewis2019BARTDS}.  \\
 While these deep learning based LMs have shown to be great methods to enable language understanding in many tasks, the ability to train these models is becoming increasingly computationally expensive. 
 \section {Goals and Challenges}
 The goal of this dissertation is to explore how curriculum learning effects Language representations. First we explore methods for evaluating the difficulty of a sentence. Using difficulty scores we then explore how to use this difficult to develop and train models with a curriculum. The final of this dissertation is to evaluate the wide spread of curriculum methods in a way that we can draw conclusions which are representative for usage on all language models.
 The main challenge in this dissertation is to scope the work to allow us to gain maximum feedback cycles. Since training large language models requires a lot of computation doing an exhaustive exploration of both curriculum methods and tuning doing an intensive hyperparameter sweep for each model would be too time intensive. Ensuring our work is representative to variations in model size and dataset size will also be challenging. Finally, ensuring our work is reproducible and expandable will also be a challenge.ks. 
 \section{Contribution}
-None yet
+Our contributions are threefold: we find that LM performance as measured by perplexity on the training corpus is not a predictive measure of transfer learning performance, CL method can produce better contextual word representations on smaller corpuses but as corpus size scales CL methods produce worse models, and we find that random curricula can prove to be as good curricula as linguistically motivated curricula.
 \section{Structure of This Dissertation}
 In Chapter 2 we present the background material in system architecture Curriculum learning, Language Modeling, and methods for evaluating Language Models. For Curriculum learning, we give a detailed and technical introduction to Curriculum Learning and discuss some recent applications in the NLP domain. With regard to Language modeling, we introduce the concept of language modeling, describe various methodological advances and improvements discovered over time, and contrast various implementations. We will also provide a brief introduction to the effects of large language models and why focusing on model training efficiency is important. Finally, we introduce some of the most popular methods for evaluating language modeling along with the datasets and frameworks we will use for our experiment. \\
 In Chapter 3, we provide a detailed explanation of our experimental setup. We propose two curriculum learning strategies building on prior work and explain how we implemented these strategies and how we evaluate the effectiveness. 
