--- a/Thesis/uwthesis.bib
+++ b/Thesis/uwthesis.bib
@@ -5,11 +5,47 @@
   year={2019},
   volume={abs/1907.12412}
 }
+@inproceedings{Howard2018UniversalLM,
+  title={Universal Language Model Fine-tuning for Text Classification},
+  author={J. Howard and Sebastian Ruder},
+  booktitle={ACL},
+  year={2018}
+}
+@article{Taylor1953ClozePA,
+  title={“Cloze Procedure”: A New Tool for Measuring Readability},
+  author={W. L. Taylor},
+  journal={Journalism  Mass Communication Quarterly},
+  year={1953},
+  volume={30},
+  pages={415 - 433}
+}
+@article{Wu2016GooglesNM,
+  title={Google's Neural Machine Translation System: Bridging the Gap between Human and Machine Translation},
+  author={Y. Wu and Mike Schuster and Z. Chen and Quoc V. Le and Mohammad Norouzi and Wolfgang Macherey and M. Krikun and Yuan Cao and Q. Gao and Klaus Macherey and Jeff Klingner and Apurva Shah and M. Johnson and X. Liu and L. Kaiser and S. Gouws and Y. Kato and Taku Kudo and H. Kazawa and K. Stevens and G. Kurian and Nishant Patil and W. Wang and C. Young and J. Smith and Jason Riesa and Alex Rudnick and Oriol Vinyals and G. S. Corrado and Macduff Hughes and J. Dean},
+  journal={ArXiv},
+  year={2016},
+  volume={abs/1609.08144}
+}
 @inproceedings{McCann2017LearnedIT,
   title={Learned in Translation: Contextualized Word Vectors},
   author={Bryan McCann and James Bradbury and Caiming Xiong and Richard Socher},
   booktitle={NIPS},
   year={2017}
+}
+@article{Elman1993LearningAD,
+  title={Learning and development in neural networks: the importance of starting small},
+  author={J. Elman},
+  journal={Cognition},
+  year={1993},
+  volume={48},
+  pages={71-99}
+}
+@article{Vaswani2017AttentionIA,
+  title={Attention is All you Need},
+  author={Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and L. Kaiser and Illia Polosukhin},
+  journal={ArXiv},
+  year={2017},
+  volume={abs/1706.03762}
 }
 @inproceedings{Pennington2014GloveGV,
   title={Glove: Global Vectors for Word Representation},
@@ -35,10 +71,183 @@
   booktitle={NAACL-HLT},
   year={2019}
 }
+@article{Dai2019TransformerXLAL,
+  title={Transformer-XL: Attentive Language Models Beyond a Fixed-Length Context},
+  author={Zihang Dai and Z. Yang and Yiming Yang and J. Carbonell and Quoc V. Le and R. Salakhutdinov},
+  journal={ArXiv},
+  year={2019},
+  volume={abs/1901.02860}
+}
+@inproceedings{Radford2019LanguageMA,
+  title={Language Models are Unsupervised Multitask Learners},
+  author={A. Radford and Jeffrey Wu and R. Child and David Luan and Dario Amodei and Ilya Sutskever},
+  year={2019}
+}
+@article{Brown2020LanguageMA,
+  title={Language Models are Few-Shot Learners},
+  author={T. Brown and B. Mann and Nick Ryder and Melanie Subbiah and J. Kaplan and Prafulla Dhariwal and Arvind Neelakantan and Pranav Shyam and Girish Sastry and Amanda Askell and Sandhini Agarwal and Ariel Herbert-Voss and G. Kr{\"u}ger and Tom Henighan and R. Child and Aditya Ramesh and D. Ziegler and Jeffrey Wu and Clemens Winter and Christopher Hesse and Mark Chen and E. Sigler and Mateusz Litwin and Scott Gray and Benjamin Chess and J. Clark and Christopher Berner and Sam McCandlish and A. Radford and Ilya Sutskever and Dario Amodei},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2005.14165}
+}
+@article{Sanh2019DistilBERTAD,
+  title={DistilBERT, a distilled version of BERT: smaller, faster, cheaper and lighter},
+  author={Victor Sanh and Lysandre Debut and Julien Chaumond and Thomas Wolf},
+  journal={ArXiv},
+  year={2019},
+  volume={abs/1910.01108}
+}
+@article{Zhou2020HULKAE,
+  title={HULK: An Energy Efficiency Benchmark Platform for Responsible Natural Language Processing},
+  author={Xiyou Zhou and Zhiyu Chen and Xiaoyong Jin and W. Wang},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2002.05829}
+}
+@article{Wynter2020OptimalSE,
+  title={Optimal Subarchitecture Extraction For BERT},
+  author={Adrian de Wynter and D. Perry},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2010.10499}
+}
+@article{Yu2017ScalpelCD,
+  title={Scalpel: Customizing DNN pruning to the underlying hardware parallelism},
+  author={Jiecao Yu and Andrew Lukefahr and D. Palframan and Ganesh S. Dasika and R. Das and S. Mahlke},
+  journal={2017 ACM/IEEE 44th Annual International Symposium on Computer Architecture (ISCA)},
+  year={2017},
+  pages={548-560}
+}
+@article{Han2016DeepCC,
+  title={Deep Compression: Compressing Deep Neural Network with Pruning, Trained Quantization and Huffman Coding},
+  author={Song Han and Huizi Mao and W. Dally},
+  journal={CoRR},
+  year={2016},
+  volume={abs/1510.00149}
+}
+
+@article{Sun2019ERNIEER,
+  title={ERNIE: Enhanced Representation through Knowledge Integration},
+  author={Yu Sun and Shuohuan Wang and Yukun Li and Shikun Feng and Xuyi Chen and Han Zhang and Xin Tian and Danxiang Zhu and Hao Tian and Hua Wu},
+  journal={ArXiv},
+  year={2019},
+  volume={abs/1904.09223}
+}
+@article{Wang2019SuperGLUEAS,
+  title={SuperGLUE: A Stickier Benchmark for General-Purpose Language Understanding Systems},
+  author={Alex Wang and Yada Pruksachatkun and Nikita Nangia and Amanpreet Singh and Julian Michael and Felix Hill and Omer Levy and Samuel R. Bowman},
+  journal={ArXiv},
+  year={2019},
+  volume={abs/1905.00537}
+} 
+@inproceedings{Dolan2005AutomaticallyCA,
+  title={Automatically Constructing a Corpus of Sentential Paraphrases},
+  author={W. Dolan and Chris Brockett},
+  booktitle={IWP@IJCNLP},
+  year={2005}
+}
+@inproceedings{Levesque2011TheWS,
+  title={The Winograd Schema Challenge},
+  author={H. Levesque and E. Davis and L. Morgenstern},
+  booktitle={KR},
+  year={2011}
+}
+@article{Pruksachatkun2020jiantAS,
+  title={jiant: A Software Toolkit for Research on General-Purpose Text Understanding Models},
+  author={Yada Pruksachatkun and Phil Yeres and Haokun Liu and Jason Phang and Phu Mon Htut and Alex Wang and Ian Tenney and Samuel R. Bowman},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2003.02249}
+}
+@inproceedings{Dagan2005ThePR,
+  title={The PASCAL Recognising Textual Entailment Challenge},
+  author={I. Dagan and Oren Glickman and B. Magnini},
+  booktitle={MLCW},
+  year={2005}
+}
+@inproceedings{BarHaim2006TheSP,
+  title={The Second PASCAL Recognising Textual Entailment Challenge},
+  author={Roy Bar-Haim and I. Dagan and B. Dolan and Lisa Ferro and Danilo Giampiccolo and B. Magnini},
+  year={2006}
+}
+@inproceedings{Bentivogli2009TheSP,
+  title={The Sixth PASCAL Recognizing Textual Entailment Challenge},
+  author={L. Bentivogli and Peter Clark and I. Dagan and Danilo Giampiccolo},
+  booktitle={TAC},
+  year={2009}
+}
+@article{Frankle2019TheLT,
+  title={The Lottery Ticket Hypothesis: Finding Sparse, Trainable Neural Networks},
+  author={Jonathan Frankle and Michael Carbin},
+  journal={arXiv: Learning},
+  year={2019}
+}
+@inproceedings{Giampiccolo2007TheTP,
+  title={The Third PASCAL Recognizing Textual Entailment Challenge},
+  author={Danilo Giampiccolo and B. Magnini and I. Dagan and W. Dolan},
+  booktitle={ACL-PASCAL@ACL},
+  year={2007}
+}
+@article{Williams2018ABC,
+  title={A Broad-Coverage Challenge Corpus for Sentence Understanding through Inference},
+  author={Adina Williams and Nikita Nangia and Samuel R. Bowman},
+  journal={ArXiv},
+  year={2018},
+  volume={abs/1704.05426}
+}
+@article{Cer2017SemEval2017T1,
+  title={SemEval-2017 Task 1: Semantic Textual Similarity Multilingual and Crosslingual Focused Evaluation},
+  author={Daniel Matthew Cer and Mona T. Diab and Eneko Agirre and I. Lopez-Gazpio and Lucia Specia},
+  journal={ArXiv},
+  year={2017},
+  volume={abs/1708.00055}
+}
+@article{Warstadt2019NeuralNA,
+  title={Neural Network Acceptability Judgments},
+  author={Alex Warstadt and Amanpreet Singh and Samuel R. Bowman},
+  journal={Transactions of the Association for Computational Linguistics},
+  year={2019},
+  volume={7},
+  pages={625-641}
+}
+@inproceedings{Socher2013RecursiveDM,
+  title={Recursive Deep Models for Semantic Compositionality Over a Sentiment Treebank},
+  author={R. Socher and Alex Perelygin and J. Wu and Jason Chuang and Christopher D. Manning and A. Ng and Christopher Potts},
+  booktitle={EMNLP},
+  year={2013}
+}
+@article{Liang2020XGLUEAN,
+  title={XGLUE: A New Benchmark Dataset for Cross-lingual Pre-training, Understanding and Generation},
+  author={Yaobo Liang and N. Duan and Yeyun Gong and N. Wu and Fenfei Guo and Weizhen Qi and Ming Gong and Linjun Shou and Daxin Jiang and G. Cao and Xiaodong Fan and Bruce Zhang and Rahul Agrawal and Edward Cui and Sining Wei and Taroon Bharti and Ying Qiao and Jiun-Hung Chen and Winnie Wu and S. Liu and Fan Yang and Rangan Majumder and M. Zhou},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2004.01401}
+}
+@article{Hu2020XTREMEAM,
+  title={XTREME: A Massively Multilingual Multi-task Benchmark for Evaluating Cross-lingual Generalization},
+  author={J. Hu and Sebastian Ruder and Aditya Siddhant and Graham Neubig and Orhan Firat and M. Johnson},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2003.11080}
+}
 @inproceedings{Shannon1951PredictionAE,
   title={Prediction and entropy of printed English},
   author={Claude E. Shannon},
   year={1951}
+}
+@article{Zhang2019CurriculumLF,
+  title={Curriculum Learning for Domain Adaptation in Neural Machine Translation},
+  author={Xuan Zhang and Pamela Shapiro and Manish Kumar and P. McNamee and Marine Carpuat and Kevin Duh},
+  journal={ArXiv},
+  year={2019},
+  volume={abs/1905.05816}
+}
+@article{Wang2019LearningAM,
+  title={Learning a Multitask Curriculum for Neural Machine Translation},
+  author={Wei Wang and Ye Tian and J. Ngiam and Yinfei Yang and Isaac Caswell and Zarana Parekh},
+  journal={ArXiv},
+  year={2019},
+  volume={abs/1908.10940}
 }
 @article{Talmor2019oLMpicsO,
   title={oLMpics - On what Language Model Pre-training Captures},
@@ -142,14 +351,6 @@
   journal={ArXiv},
   year={2014},
   volume={abs/1405.4053}
-}
-@article{Miller1992WordNetAL,
-  title={WordNet: a lexical database for English},
-  author={George A. Miller},
-  journal={Commun. ACM},
-  year={1992},
-  volume={38},
-  pages={39-41}
 }
 @inproceedings{Leacock1993TowardsBC,
   title={Towards Building Contextual Representations Of Word Senses Using Statistical Models},
@@ -343,16 +544,10 @@
   url       = {https://doi.org/10.18653/v1/P17-4012},
   doi       = {10.18653/v1/P17-4012}
 }
-@misc{wang2019jiant,
-    author = {Alex Wang and Ian F. Tenney and Yada Pruksachatkun and Katherin Yu and Jan Hula and Patrick Xia and Raghu Pappagari and Shuning Jin and R. Thomas McCoy and Roma Patel and Yinghui Huang and Jason Phang and Edouard Grave and Haokun Liu and Najoung Kim and Phu Mon Htut and Thibault F\'evry and Berlin Chen and Nikita Nangia and Anhad Mohananey and Katharina Kann and Shikha Bordia and Nicolas Patry and David Benton and Ellie Pavlick and Samuel R. Bowman},
-    title = {\texttt{jiant} 1.2: A software toolkit for research on general-purpose text understanding models},
-    howpublished = {\url{http://jiant.info/}},
-    year = {2019}
-}
+
 @misc{Rosset2020TNLG,
     author = {Corby Rosset},
     title = {Turing-NLG: A 17-billion-parameter language model by Microsoft},
-    howpublished = {\url{https://www.microsoft.com/en-us/research/blog/turing-nlg-a-17-billion-parameter-language-model-by-microsoft/}},
     year = {2020}
 }
 @article{Bahdanau2014NeuralMT,
@@ -368,12 +563,7 @@
   booktitle={EMNLP},
   year={2016}
 }
-@inproceedings{Vaswani2017AttentionIA,
-  title={Attention is All you Need},
-  author={Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin},
-  booktitle={NIPS},
-  year={2017}
-}
+
 @inproceedings{Luong2015EffectiveAT,
   title={Effective Approaches to Attention-based Neural Machine Translation},
   author={Thang Luong and Hieu Pham and Christopher D. Manning},
