--- a/Thesis/uwthesis.bib
+++ b/Thesis/uwthesis.bib
@@ -11,6 +11,47 @@
   booktitle={ACL},
   year={2018}
 }
+@article{Sagheer2019TimeSF,
+  title={Time series forecasting of petroleum production using deep LSTM recurrent networks},
+  author={A. Sagheer and Mostafa Kotb},
+  journal={Neurocomputing},
+  year={2019},
+  volume={323},
+  pages={203-213}
+}
+@article{Frankle2019TheLT,
+  title={The Lottery Ticket Hypothesis: Finding Sparse, Trainable Neural Networks},
+  author={Jonathan Frankle and Michael Carbin},
+  journal={arXiv: Learning},
+  year={2019}
+}
+ @misc{QQP, title={Quora Question Pairs}, url={https://www.kaggle.com/c/quora-question-pairs/overview}, journal={Kaggle}} 
+@article{Jean2015OnUV,
+  title={On Using Very Large Target Vocabulary for Neural Machine Translation},
+  author={S. Jean and Kyunghyun Cho and R. Memisevic and Yoshua Bengio},
+  journal={ArXiv},
+  year={2015},
+  volume={abs/1412.2007}
+}
+@inproceedings{Han2017ESEES,
+  title={ESE: Efficient Speech Recognition Engine with Sparse LSTM on FPGA},
+  author={Song Han and Junlong Kang and Huizi Mao and Yiming Hu and Xin Li and Y. Li and Dongliang Xie and Hong Luo and S. Yao and Y. Wang and H. Yang and W. J. Dally},
+  booktitle={FPGA '17},
+  year={2017}
+}
+@article{Hochreiter1998TheVG,
+  title={The Vanishing Gradient Problem During Learning Recurrent Neural Nets and Problem Solutions},
+  author={S. Hochreiter},
+  journal={Int. J. Uncertain. Fuzziness Knowl. Based Syst.},
+  year={1998},
+  volume={6},
+  pages={107-116}
+}
+@unpublished{spacy2,
+    AUTHOR = {Honnibal, Matthew and Montani, Ines},
+    TITLE  = {{spaCy 2}: Natural language understanding with {B}loom embeddings, convolutional neural networks and incremental parsing},
+    YEAR   = {2017},
+    No
 @article{Taylor1953ClozePA,
   title={“Cloze Procedure”: A New Tool for Measuring Readability},
   author={W. L. Taylor},
@@ -89,6 +130,29 @@
   journal={ArXiv},
   year={2020},
   volume={abs/2005.14165}
+}
+@article{Roy2018UsingWE,
+  title={Using Word Embeddings for Information Retrieval: How Collection and Term Normalization Choices Affect Performance},
+  author={Dwaipayan Roy and Debasis Ganguly and S. Bhatia and Srikanta J. Bedathur and M. Mitra},
+  journal={Proceedings of the 27th ACM International Conference on Information and Knowledge Management},
+  year={2018}
+}
+@inproceedings{Zou2013BilingualWE,
+  title={Bilingual Word Embeddings for Phrase-Based Machine Translation},
+  author={Will Y. Zou and R. Socher and Daniel Matthew Cer and Christopher D. Manning},
+  booktitle={EMNLP},
+  year={2013}
+}
+@inproceedings{Zhou2016ECNUAS,
+  title={ECNU at SemEval-2016 Task 4: An Empirical Investigation of Traditional NLP Features and Word Embedding Features for Sentence-level and Topic-level Sentiment Analysis in Twitter},
+  author={Yunxiao Zhou and Zhihua Zhang and Man Lan},
+  booktitle={SemEval@NAACL-HLT},
+  year={2016}
+}
+@inproceedings{Othman2017AWE,
+  title={A Word Embedding based Method for Question Retrieval in Community Question Answering},
+  author={N. Othman and R. Faiz and Kamel Sma{\"i}li},
+  year={2017}
 }
 @article{Sanh2019DistilBERTAD,
   title={DistilBERT, a distilled version of BERT: smaller, faster, cheaper and lighter},
